--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
     "next-themes": "^0.4.6",
     "overlayscrollbars": "^2.13.0",
