--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.26",
     "next-themes": "^0.4.6",
     "overlayscrollbars": "^2.13.0",
     "overlayscrollbars-react": "^0.5.6",
